--- a/index.html
+++ b/index.html
@@ -6,34 +6,34 @@
 <title>Väggtimer – skalad scen (matchad bar)</title>
 <style>
   :root{
-    --fs-time: 220px;   /* stora siffror i design-ytan (skalning via JS) */
-    --fs-title: 3rem;   /* större rubrik */
+    --fs-time: 220px;
+    --fs-title: 3rem;
     --fs-subtitle: 1.4rem;
 
-    --bar-h: 56px;            /* tjockare bar */
-    --bar-radius: 16px;       /* mer fyrkantig rundning */
-    --bar-bg: #2a2a2a;        /* ofyllda delen */
-    --bar-fill: #53917E;      /* fyllda delen (önskad färg) */
+    --bar-h: 56px;
+    --bar-radius: 16px;
+    --bar-bg: #2a2a2a;
+    --bar-fill: #53917E;
   }
 
   html,body{
     height:100%; margin:0;
-    background:#000;           /* svart bakgrund */
+    background:#000;
     color:#fff; overflow:hidden;
     -webkit-text-size-adjust:100%; text-size-adjust:100%;
   }
-  body.danger{ background:#FF7E6B; } /* önskad färg sista 10 minuterna */
+  /* Färg när ≤ 10 min återstår */
+  body.danger{ background:#a5402d; }
 
-  /* === SCEN (fast design-yta 1280×800 som vi skalar/centrerar med JS) === */
   #stage{
     position:absolute; left:0; top:0;
-    width:1280px; height:800px;       /* DESIGNMÅTT */
+    width:1280px; height:800px;
     box-sizing:border-box;
     padding:20px;
     display:grid;
-    grid-template-rows:auto auto 1fr auto; /* titel, undertext, klocka, track */
+    grid-template-rows:auto auto 1fr auto;
     gap:12px;
-    transform-origin:0 0; will-change:transform; backface-visibility:hidden;
+    transform-origin:0 0; will-change:transform;
     background:transparent;
   }
 
@@ -52,13 +52,11 @@
     white-space:nowrap; margin-bottom:8px;
   }
 
-  /* === Track (bar + ticks) ===
-     Längden sätts i JS för att matcha .time exakt; centrerad med margin:auto. */
   .track{
     position:relative;
-    margin: 0 auto;   /* centrerad */
-    padding: 0;       /* ingen sid-padding – bar = exakt samma längd som tids-texten */
-    width: 900px;     /* initial, ersätts av JS */
+    margin: 0 auto;
+    padding: 0;
+    width: 900px;
   }
   .bar{
     position:relative;
@@ -70,10 +68,10 @@
   }
   .fill{
     position:absolute;
-    left:0; top:0; bottom:0;   /* WebView 59-kompatibelt */
+    left:0; top:0; bottom:0;
     height:100%;
     width:0%;
-    background: var(--bar-fill);       /* solid önskefärg */
+    background: var(--bar-fill);
     border-radius: inherit;
     transform: translateZ(0);
   }
@@ -86,7 +84,6 @@
   .tick.end i{ width:4px; height:28px; background:#fff; }
   .tick.end span{ font-weight:900; }
 
-  /* Settings-knappen: övre högra hörnet */
   .fab{
     position:absolute; right:16px; top:16px;
     width:64px; height:64px; z-index:10;
@@ -135,12 +132,10 @@
   </div>
 
 <script>
-/* --- Selektorer --- */
 var $ = function(s){ return document.querySelector(s); };
 var title=$('#title'), subtitle=$('#subtitle'), timeEl=$('#time'), fill=$('#fill'), ticks=$('#ticks');
 var settings=$('#settings'), stage=$('#stage'), track=$('#track');
 
-/* --- Perioddata --- */
 var DEFAULT_PERIODS = [
   { name:"Morgon",     start:"07:00", end:"09:00" },
   { name:"Arbetstid",  start:"09:00", end:"17:00" },
@@ -157,7 +152,6 @@ function getPeriods(){
 }
 function setPeriods(p){ localStorage.setItem('walltimer.periods', JSON.stringify(p)); }
 
-/* --- Hjälp --- */
 function t2m(t){ var parts=t.split(':'), h=+parts[0], m=+parts[1]||0; return (h%24)*60+m; }
 function nowMin(){ var n=new Date(); return n.getHours()*60+n.getMinutes()+n.getSeconds()/60; }
 function pad2(x){ return (x<10?'0':'')+x; }
@@ -167,8 +161,6 @@ function fmt(ms){
   var m=Math.floor(s/60); s-=m*60;
   return h+'h '+m+'m '+pad2(s)+'s';
 }
-
-/* --- Splitta över midnatt & välj period (Chrome 59-vänligt) --- */
 function expand(ps){
   var out=[];
   for(var i=0;i<ps.length;i++){
@@ -200,7 +192,6 @@ function pick(ps){
   return {cur:cur, nxt:nxt};
 }
 
-/* --- Ticks --- */
 function chooseTickStep(totalMin){
   if (totalMin <= 120) return 30;
   if (totalMin <= 480) return 60;
@@ -213,7 +204,6 @@ function fmtTick(mins){
 function drawTicks(totalMin){
   ticks.innerHTML='';
   var step = chooseTickStep(totalMin);
-  /* Viktigt: rita inte ett tick vid exakt totalMin (annars krockar det med "slut") */
   for(var at=0; at<totalMin; at+=step){
     var left = (at/totalMin)*100;
     var div = document.createElement('div');
@@ -229,7 +219,6 @@ function drawTicks(totalMin){
   ticks.appendChild(end);
 }
 
-/* --- Ljudpip vid slut --- */
 var audioCtx;
 function beep(ms, freq){
   ms = ms || 200; freq = freq || 880;
@@ -242,7 +231,6 @@ function beep(ms, freq){
   }catch(e){}
 }
 
-/* === SCEN-SKALNING (fix för WebView 59) === */
 var BASE_W = 1280, BASE_H = 800;
 var __lastScale = 1;
 function applyScale(){
@@ -254,24 +242,21 @@ function applyScale(){
   var y=(wh-BASE_H*s)/2;
   stage.style.transform='translate('+x+'px,'+y+'px) scale('+s+')';
   __lastScale = s;
-  // console.log('applyScale()', {ww:ww,wh:wh,s:s,x:x,y:y});
 }
 window.addEventListener('resize', applyScale);
 window.addEventListener('orientationchange', applyScale);
 
-/* === Matcha barens längd med nedräknarens text === */
 var __trackW = 0;
 function sizeTrackToTime(){
   var rect = timeEl.getBoundingClientRect();
   var wViewport = rect.width || 900;
   var wDesign = Math.max(300, Math.min(BASE_W, Math.round(wViewport / (__lastScale||1))));
-  if (Math.abs(wDesign - __trackW) > 2){   /* undvik jitter */
+  if (Math.abs(wDesign - __trackW) > 2){
     track.style.width = wDesign + 'px';
     __trackW = wDesign;
   }
 }
 
-/* --- Huvudloop --- */
 function pad2n(n){ return (n<10?'0':'')+n; }
 function loop(){
   var ps=getPeriods();
@@ -287,7 +272,6 @@ function loop(){
   var endH = pad2n(Math.floor(endMin/60));
   var endM = pad2n(endMin%60);
 
-  /* titel + undertext */
   title.textContent = 'Tid kvar till ' + nxt.name + ' (kl ' + endH + ':' + endM + ')';
   subtitle.textContent = 'Nästa: ' + nxt.name + ' \u2192 ' +
     pad2n(Math.floor(nxt.a/60)) + ':' + pad2n(nxt.a%60);
@@ -299,11 +283,9 @@ function loop(){
 
   drawTicks((cur.b - cur.a));
 
-  /* röd bakgrund vid ≤ 10 min */
   if (remain <= 10 * 60 * 1000) { document.body.classList.add('danger'); }
   else { document.body.classList.remove('danger'); }
 
-  /* uppdatera track-bredden så den följer texten */
   sizeTrackToTime();
 
   if(remain<=1000 && remain>0){
@@ -311,11 +293,9 @@ function loop(){
       (function(k){ setTimeout(function(){ beep(120, 1000+k*60); }, k*180); })(i);
     }
   }
-
   requestAnimationFrame(loop);
 }
 
-/* --- Inställnings-UI --- */
 function openSettings(v){ settings.style.display = (v===false)? 'none':'block'; }
 function rowTpl(p,i){
   return '<div class="row" data-i="'+i+'">'+
@@ -341,6 +321,8 @@ function saveRows(){
 }
 
 $('#openSettings').addEventListener('click', function(){ renderRows(); openSettings(true); });
+
+// Håll intryck (touch & håll) för att öppna inställningar snabbt
 var touchTimer=null;
 document.addEventListener('touchstart', function(){
   touchTimer=setTimeout(function(){ renderRows(); openSettings(true); }, 650);
@@ -351,24 +333,37 @@ document.addEventListener('touchend', function(){
 
 $('#close').addEventListener('click', function(){ openSettings(false); });
 $('#save').addEventListener('click', saveRows);
+
+// Lägg till ny period
 $('#add').addEventListener('click', function(){
-  var ps=getPeriods(); ps.push({name:"Ny period", start:"12:00", end:"13:00"}); setPeriods(ps); renderRows();
-});
-settings.addEventListener('click', function(e){
-  var el=e.target; if(!el || !el.getAttribute) return;
-  var idx=el.getAttribute('data-del'); if(idx==null) return;
-  var ps=getPeriods(); ps.splice(+idx,1); setPeriods(ps); renderRows();
+  var ps=getPeriods();
+  ps.push({ name:'Ny period', start:'08:00', end:'09:00' });
+  setPeriods(ps);
+  renderRows();
 });
 
-/* Dubbeltryck för helskärm (om stöds) */
-document.addEventListener('dblclick', function(){
-  var el=document.documentElement; if(el.requestFullscreen) el.requestFullscreen();
+// Ta bort period (delegation)
+document.addEventListener('click', function(e){
+  var del = e.target && e.target.getAttribute && e.target.getAttribute('data-del');
+  if(del!=null){
+    var ps=getPeriods();
+    ps.splice(+del,1);
+    setPeriods(ps);
+    renderRows();
+  }
 });
 
-/* --- Start --- */
-applyScale();
-sizeTrackToTime();
-loop();
+// Spara vid Enter i formuläret
+document.addEventListener('keydown', function(e){
+  if(e.key==='Enter' && settings.style.display==='block'){ saveRows(); }
+});
+
+// Init
+window.addEventListener('load', function(){
+  applyScale();
+  renderRows();
+  requestAnimationFrame(loop);
+});
 </script>
 </body>
 </html>
